--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Legacy Illusion
+subtitle: Attempt to demonstrate that all is possible
 ---
 
 <div class="posts-list">
